bug fix: - title position in the 3rd pricing block - text-align for icons in contacts

--- a/GoIT/markup/home/Project_1/style.css
+++ b/GoIT/markup/home/Project_1/style.css
@@ -21,7 +21,7 @@ time, mark, audio, video {
 
 body {
     width: 100%;
-    z-index: -50px;
+    z-index: -50;
 }
 
 #home, #about, #portfolio, #services, #pricing, #testimonials, #contacts {
@@ -91,7 +91,6 @@ body {
     height: 115px;
     overflow: hidden;
     bottom: 0;
-    padding: 0px 0px 19px;
 }
 
 @font-face {
@@ -324,7 +323,7 @@ li.price-item:last-child {
     height: 73px;
     background-color: #ee8129;
     color: #fff;
-    line-height: 73px;
+    line-height: 63px;
     margin: 0;
     border: none;
     border-radius: initial;
@@ -530,6 +529,7 @@ li.price-item:last-child {
     line-height: 1.5em;
 }
 
+/*CONTACTS*/
 #contacts {
     height: 345px;
 }
@@ -562,6 +562,7 @@ li.price-item:last-child {
     width: 30px;
     height: 30px;
     padding-top: 5px;
+    text-align: center;
 }
 
 .contacts_area td:nth-child(even) {
